# embed-validator

./: .gitignore  README.md  imgdata.json  inference_client.py  job.py  model-comp.csv  openapi.json  pyproject.toml  result.json
.cursor/rules/: mem.mdc
memory-bank/: @design-document.md
src/: config.py  preview.py
