[project]
name = "embed-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fabric>=3.2.2",
    "loguru>=0.7.3",
    "numpy>=2.3.0",
    "requests>=2.32.3",
]


[tool.ruff]
indent-width = 2
line-length = 120
target-version = "py312"
